samples/cr/test/fortio-simple.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple
  namespace: simple
  labels:
    app: simple
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: simple
---
#apiVersion: networking.istio.io/v1alpha3
#kind: Sidecar
#metadata:
#  name: default
#  namespace: simple
#spec:
#  egress:
#    - hosts:
#        - "./*"
#---
# Strict auth for this namespace - this should be the default.
#apiVersion: security.istio.io/v1beta1
#kind: PeerAuthentication
#metadata:
#  name: default
#  namespace: simple-${REV}
#spec:
##  selector:
##    matchLabels:
##      app: simple
#  mtls:
#    mode: STRICT
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: simples
#spec:
#  host: simple
#  trafficPolicy:
#    tls:
#      mode: ISTIO_MUTUAL
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-cli
  namespace: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-cli
  template:
    metadata:
      name: simple-cli
      namespace: simple
      labels:
        app: simple-cli
      annotations:
        sidecar.istio.io/logLevel: info
        sidecar.istio.io/debug: token:debug
        #sidecar.istio.io/proxyImage: gcr.io/wlhe-cr/proxyv2:${TAG}
        sidecar.istio.io/proxyCPU: 20m
        sidecar.istio.io/proxyMemory: 300m
    spec:
      containers:
        - name: app
          image: costinm/fortio:latest
          args:
            - load
            - -allow-initial-errors
            - -t
            - "0"
            - -abort-on
            - "123"
            - -allow-initial-errors
            - -c
            - "1"
            - -qps
            - "1"
            - http://simple.simple.svc:8080/echo?size=5000
          env:
            - name: istio
              value: ${REV}
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 200m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
  namespace: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
        version: v1
      annotations:
        #sidecar.istio.io/logLevel: info
        #sidecar.istio.io/componentLogLevel: token:debug
        #sidecar.istio.io/debug: token:debug
        #sidecar.istio.io/proxyImage: gcr.io/wlhe-cr/proxyv2:${TAG}
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 200m
    spec:
      containers:
        - name: app
          image: costinm/fortio:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8079
          args:
            - server
          env:
            - name: istio
              value: ${REV}
          resources:
            requests:
              cpu: 10m
              memory: 300m
