samples/cr/test/fortio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fortio-${REV}
  labels:
    istio.io/rev: ${REV}
---
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: fortio-${REV}
  labels:
    app: fortio
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: fortio
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: fortio-${REV}
spec:
  egress:
    - hosts:
        - "./*"
        - "fortio-oss/*"
        - "fortio-asm/*"
---
# Strict auth for this namespace - this should be the default.
#apiVersion: security.istio.io/v1beta1
#kind: PeerAuthentication
#metadata:
#  name: default
#  namespace: fortio-${REV}
#spec:
##  selector:
##    matchLabels:
##      app: fortio
#  mtls:
#    mode: STRICT

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortios
  namespace: fortio-${REV}
spec:
  host: fortio
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-cli
  namespace: fortio-${REV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-cli
  template:
    metadata:
      name: fortio-cli
      namespace: fortio
      labels:
        app: fortio-cli
      annotations:
        sidecar.istio.io/logLevel: info
        sidecar.istio.io/debug: token:debug
        #sidecar.istio.io/proxyImage: gcr.io/wlhe-cr/proxyv2:${TAG}
        sidecar.istio.io/proxyCPU: 20m
        sidecar.istio.io/proxyMemory: 300m
    spec:
      containers:
        - name: app
          image: costinm/fortio:latest
          args:
            - load
            - -allow-initial-errors
            - -t
            - "0"
            - -abort-on
            - "123"
            - -allow-initial-errors
            - -c
            - "1"
            - -qps
            - "1"
            - http://fortio.fortio-${REV}:8080/echo?size=5000
          env:
            - name: istio
              value: ${REV}
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 200m
#        - name: oss
#          image: costinm/fortio:latest
#          args:
#            - load
#            - -allow-initial-errors
#            - -t
#            - "0"
#            - -abort-on
#            - "123"
#            - -allow-initial-errors
#            - -c
#            - "1"
#            - -qps
#            - "1"
#            - http://fortio.fortio${TARGET}.svc:8080/echo?size=5000
#          env:
#            - name: istio
#              value: ${REV}
#          resources:
#            requests:
#              cpu: 10m
#            limits:
#              cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
  namespace: fortio-${REV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
  template:
    metadata:
      labels:
        app: fortio
        version: v1
      annotations:
        sidecar.istio.io/logLevel: info
        #sidecar.istio.io/componentLogLevel: token:debug
        sidecar.istio.io/debug: token:debug
        #sidecar.istio.io/proxyImage: gcr.io/wlhe-cr/proxyv2:${TAG}
        sidecar.istio.io/proxyCPU: 10m
        sidecar.istio.io/proxyMemory: 200m
    spec:
      containers:
       -  name: app
          image: costinm/fortio:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8079
          args:
            - server
          env:
            - name: istio
              value: ${REV}
          resources:
            requests:
              cpu: 10m
              memory: 300m
