samples/cr/test/peerauthentication-strict-ns.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: fortio-asm
spec:
  mtls:
    mode: STRICT
---
