samples/cr/test/peerauthentication-strict-selector.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: fortio-asm
spec:
  selector:
    matchLabels:
      app: fortio
  mtls:
    mode: STRICT
---
